--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Hello, World</p>
     <p>Adding some extra text for travis</p>
     <p>Staging Test</p>
+    <p>More text</p>
 </body>
 </html>
