--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <p>Hello, World</p>
-    <p>Adding some extra text for travis</p>
-    <p>Staging Test</p>
-    <p>More text</p>
+    <p>First test with Ansible</p>
 </body>
 </html>
